tests/fixtures/errors/missing_return.z
# E0100: a value-returning function with a bare `return` (no value).
f: function out i64 is {
    return
}
main: function is {
    x: f
}
